                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 13-04-2005 fixed: dvdplayer didn't work at all as it's pixelshader source had been removed
  - 13-04-2005 added: new virtual window for dvdplayer when in menu mode. allows nicer keymappings.
  - 13-04-2005 updated: German language file
  - 13-04-2005 updated: French language file (Thnx to modhack)
  - 13-04-2005 updated: Italian language file (Thnx to kotix)
  - 13-04-2005 updated: Polish language file (Thnx to napek)
  - 13-04-2005 updated: Norwegian language file (Thnx to vnm)
  - 13-04-2005 updated: Finnish language file (Thnx to jutski)
  - 13-04-2005 fixed: ff/rw/play buttons on remote didn't work in fullscreen
  - 13-04-2005 added: Support to toggle new time/progbar display in fullscreen (default mapped to white button)
  - 12-04-2005 added: navigation sounds
  - 11-04-2005 fixed: FullscreenVideo wasn't rescaled correctly to PAL60.
  - 11-04-2005 changed: GUIInfoManager if/else blocks to switch (faster)
  - 11-04-2005 fixed: Buffering text wasn't displayed during buffering
  - 11-04-2005 fixed: Selected item in My Videos wasn't remembered.
  - 11-04-2005 fixed: Double tap remote bug.
  - 11-04-2005 changed: Removed duplicate code from Video OSD/Fullscreen.
  - 11-04-2005 fixed: Context menu didn't popup in empty dirs if "Hide Parent Items" was turned on.
  - 11-04-2005 fixed: GUI Filters were not used correctly when returning from Slideshow.
  - 11-04-2005 changed: Removed duplicate code from the Video Playlist window
  - 11-04-2005 changed: Removed all info* controls as it was just duplicate code.
  - 11-04-2005 changed: Optimised lookup of info from GUIInfoManager.